--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta1",
+    "mitt": "^2.1.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
-    "typescript": "~3.9.3"
+    "typescript": "~3.9.3",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   }
 }
